--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     /* ===== Слои ===== */
-    .layer-fx { z-index: 2; pointer-events: none; }
+    .layer-fx { z-index: 10; } /* эффекты всегда поверх */
     .layer-monsters-shadow { z-index: 0; pointer-events: none; }
     .layer-monsters { z-index: 1; pointer-events: none; }
     .layer-checker { z-index: 5; }
@@ -86,7 +86,7 @@
     /* ===== Монстры ===== */
     .monsters-shadow, .monsters {
       position: fixed;
-      bottom: -15vh; /* монстры "ныряют" под экран */
+      bottom: -15vh;
       left: 0;
       width: 100%;
       display: flex;
@@ -101,24 +101,9 @@
     }
     .monsters img,
     .monsters-shadow img {
-      height: 70vh; /* одинаковый рост */
+      height: 70vh;
       width: auto;
       object-fit: contain;
-    }
-    /* поправка для пчелы */
-    .monsters div:nth-child(1) img,
-    .monsters-shadow div:nth-child(1) img {
-      transform: translateY(5vh);
-    }
-    /* центр без смещения */
-    .monsters div:nth-child(2) img,
-    .monsters-shadow div:nth-child(2) img {
-      transform: translateY(0);
-    }
-    /* фиолетовый чуть ниже */
-    .monsters div:nth-child(3) img,
-    .monsters-shadow div:nth-child(3) img {
-      transform: translateY(3vh);
     }
     .monsters img { animation: monsterPeek 6s ease-in-out infinite; }
     @keyframes monsterPeek {
@@ -126,21 +111,22 @@
       50% { transform: translateY(0) rotate(2deg); }
     }
 
-    /* ===== Эффекты (Tickets, Berets, Bubbles) ===== */
+    /* ===== Эффекты ===== */
     .fx-container {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
       overflow: hidden;
-      pointer-events: none;
+      pointer-events: none; /* контейнер клики не ловит */
     }
     .ticket, .beret, .bubble {
       position: absolute;
       display: block;
+      pointer-events: auto; /* клики работают */
     }
     .ticket img, .beret img {
-      width: 40px;
-      opacity: 0.8;
+      width: 60px;
+      opacity: 0.9;
     }
     .bubble {
       width: 20px; height: 20px;
@@ -149,8 +135,8 @@
       box-shadow: 0 0 10px rgba(255,255,255,0.7);
     }
     @keyframes fall {
-      0% { transform: translateY(-10%); opacity: 1; }
-      100% { transform: translateY(110vh); opacity: 0; }
+      0% { transform: translateY(-10%) scale(1); opacity: 1; }
+      100% { transform: translateY(110vh) scale(1.1); opacity: 0; }
     }
     @keyframes rise {
       0% { transform: translateY(110vh) scale(0.5); opacity: 0.8; }
@@ -238,7 +224,7 @@
       if (!inputEl || !resultEl) return;
 
       const input = inputEl.value.trim().toLowerCase();
-      inputEl.value = ""; // очищаем поле
+      inputEl.value = ""; 
 
       if (!input) {
         resultEl.innerText = "Enter wallet address!";
@@ -264,22 +250,24 @@
         const el = document.createElement("div");
         el.className = "ticket";
         el.style.left = Math.random() * 100 + "vw";
-        el.style.top = "-10%";
-        el.style.animation = `fall ${6 + Math.random() * 4}s linear forwards`;
+        el.style.top = "-15%";
+        el.style.transform = `rotate(${Math.random() * 60 - 30}deg)`;
+        el.style.animation = `fall ${2 + Math.random() * 2}s linear forwards`;
         el.innerHTML = `<img src="ticket.png" alt="ticket">`;
         fx.appendChild(el);
-        setTimeout(() => el.remove(), 10000);
+        setTimeout(() => el.remove(), 5000);
       }
 
       function spawnBeret() {
         const el = document.createElement("div");
         el.className = "beret";
         el.style.left = Math.random() * 100 + "vw";
-        el.style.top = "-10%";
-        el.style.animation = `fall ${5 + Math.random() * 5}s linear forwards`;
-        el.innerHTML = `<img src="beret.png" alt="beret">`;
+        el.style.top = "-15%";
+        el.style.transform = `rotate(${Math.random() * 360}deg)`;
+        el.style.animation = `fall ${2 + Math.random() * 2}s linear forwards`;
+        el.innerHTML = `<img src="beret_red.png" alt="red beret">`;
         fx.appendChild(el);
-        setTimeout(() => el.remove(), 10000);
+        setTimeout(() => el.remove(), 5000);
       }
 
       function spawnBubble() {
@@ -287,14 +275,26 @@
         el.className = "bubble";
         el.style.left = Math.random() * 100 + "vw";
         el.style.bottom = "-5%";
-        el.style.animation = `rise ${6 + Math.random() * 4}s ease-in forwards`;
+        el.style.width = 10 + Math.random() * 25 + "px";
+        el.style.height = el.style.width;
+        el.style.animation = `rise ${4 + Math.random() * 3}s ease-in forwards`;
         fx.appendChild(el);
-        setTimeout(() => el.remove(), 10000);
+        setTimeout(() => el.remove(), 8000);
       }
 
-      setInterval(spawnTicket, 2500);
-      setInterval(spawnBeret, 4000);
-      setInterval(spawnBubble, 1200);
+      function randomSpawn() {
+        const choice = Math.random();
+        if (choice < 0.4) {
+          spawnTicket();
+        } else if (choice < 0.8) {
+          spawnBeret();
+        } else {
+          spawnBubble();
+        }
+        setTimeout(randomSpawn, 200 + Math.random() * 600);
+      }
+
+      randomSpawn();
     }
   </script>
 </body>
