--- a/index.html
+++ b/index.html
@@ -8,11 +8,40 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: #111; /* у тебя тут был свой фон, не меняй */
+      background: #fff; /* белый фон */
     }
 
-    /* === Твоя основа (фон, монстры, чекер, фото9, тени) === */
-    /* Оставь всё, как у тебя было в исходном коде! */
+    /* === Твоя основа === */
+    .photo9 {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 250px;
+      height: auto;
+      z-index: 5;
+    }
+
+    .checker {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 120px;
+      background: url("checker.png") repeat-x;
+      z-index: 3;
+    }
+
+    .monster {
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      background-size: cover;
+      z-index: 2;
+    }
+    .monster1 { left: 10%; top: 20%; background-image: url("monster1.png"); }
+    .monster2 { left: 50%; top: 40%; background-image: url("monster2.png"); }
+    .monster3 { left: 80%; top: 25%; background-image: url("monster3.png"); }
 
     /* === Контейнер для падающих берет и билетов === */
     .fx-container {
@@ -42,7 +71,12 @@
   </style>
 </head>
 <body>
-  <!-- === Твоя сцена с фоном, монстрами, чекером и фото9 остаётся как есть === -->
+  <!-- === Твоя сцена === -->
+  <div class="monster monster1"></div>
+  <div class="monster monster2"></div>
+  <div class="monster monster3"></div>
+  <div class="checker"></div>
+  <img src="photo9.png" alt="photo9" class="photo9">
 
   <!-- Контейнер для падающих берет и билетов -->
   <div class="fx-container" id="fx"></div>
@@ -58,7 +92,7 @@
       const rotate = Math.random() * 360;
       const duration = 2 + Math.random() * 3;
       const direction = Math.random() < 0.5 ? 1 : -1;
-      const size = 60 + Math.random() * 80; // случайный размер
+      const size = 60 + Math.random() * 80;
       el.style.transform = `rotate(${rotate}deg)`;
       el.style.animation = `fall ${duration}s linear forwards`;
       el.innerHTML = `<img src="haha_20.png" alt="ticket" style="width:${size}px; transform: rotate(${direction * 15}deg);">`;
