--- a/index.html
+++ b/index.html
@@ -1,133 +1,320 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>JUMAPEL</title>
+  <meta charset="UTF-8" />
+  <title>Jumapel Nads | Checker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
+    :root {
+      --page-w: 90vw; /* адаптивная ширина */
+      --page-max: 450px;
+    }
+
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
+      color: #fff;
       overflow: hidden;
-      background: #fff; /* белый фон */
     }
 
-    /* === Твоя основа === */
-    .photo9 {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 250px;
+    /* ====== СЛОИ ====== */
+    .layer-fx { z-index: 2; pointer-events: none; }
+    .layer-monsters-shadow { z-index: 0; pointer-events: none; }
+    .layer-monsters { z-index: 1; pointer-events: none; }
+    .layer-checker { z-index: 5; }
+    .layer-topimg { z-index: 6; }
+
+    /* ====== КОНТЕЙНЕР ====== */
+    .stack {
+      position: relative;
+      width: var(--page-w);
+      max-width: var(--page-max);
+      margin: 20px auto 0 auto;
+    }
+
+    /* ====== ВЕРХНЯЯ КАРТИНКА ====== */
+    .top-image {
+      position: relative;
+      width: 100%;
+      margin: 0 auto 10px auto;
+    }
+    .top-image img {
+      width: 100%;
       height: auto;
-      z-index: 5;
+      display: block;
     }
 
+    /* ====== ЧЕКЕР ====== */
     .checker {
+      position: relative;
+      width: 100%;
+      margin: 0 auto 10px auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .checker .row {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
+    #walletInput {
+      flex: 1;
+      min-width: 0;
+      padding: 12px 15px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+    }
+    #checkBtn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+    }
+    #checkBtn:disabled {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+    .beret-btn {
+      width: 140px;
+      transition: transform 0.2s ease;
+      display: block;
+    }
+    .beret-btn:hover {
+      transform: scale(1.05) rotate(-2deg);
+    }
+    #result {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      min-height: 22px;
+    }
+
+    /* ====== ЭФФЕКТЫ (билеты, береты, пузыри) ====== */
+    .fx-field {
+      position: fixed;
+      left: 0;
+      bottom: -120px;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .fx-item {
       position: absolute;
+      bottom: -120px;
+      left: 0;
+      transform: translateX(var(--x, 0)) translateY(0) rotate(0deg);
+      opacity: 0;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+      animation-fill-mode: forwards;
+      will-change: transform, opacity;
+      pointer-events: none;
+    }
+    .ticket-item img { width: var(--size, 110px); height: auto; display: block; }
+    .ticket-item { animation-name: flyTicket; animation-duration: var(--dur, 7s); animation-delay: var(--delay, 0s); }
+    @keyframes flyTicket {
+      0% { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
+      5% { opacity: 1; }
+      100% { transform: translateX(calc(var(--x, 0) + 120px)) translateY(-110vh) rotate(360deg); opacity: 0; }
+    }
+    .beret-item img { width: var(--size, 95px); height: auto; display: block; }
+    .beret-item { animation-name: flyBeret; animation-duration: var(--dur, 9s); animation-delay: var(--delay, 0s); }
+    @keyframes flyBeret {
+      0% { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
+      10% { opacity: 1; }
+      100% { transform: translateX(calc(var(--x, 0) - 160px)) translateY(-120vh) rotate(-720deg); opacity: 0; }
+    }
+    .bubble-item {
+      width: var(--size, 40px);
+      height: var(--size, 40px);
+      background: rgba(255,255,255,0.22);
+      border-radius: 50%;
+      animation-name: flyBubble;
+      animation-duration: var(--dur, 12s);
+      animation-delay: var(--delay, 0s);
+      box-shadow: inset -6px -10px 18px rgba(255,255,255,0.25),
+                  inset 6px 10px 18px rgba(0,0,0,0.08);
+      backdrop-filter: blur(2px);
+    }
+    @keyframes flyBubble {
+      0% { transform: translateX(var(--x, 0)) translateY(0) scale(1); opacity: 0.4; }
+      50% { opacity: 0.9; }
+      100% { transform: translateX(calc(var(--x, 0) + 40px)) translateY(-110vh) scale(1.6); opacity: 0; }
+    }
+
+    /* ====== МОНСТРЫ ====== */
+    .monsters-shadow, .monsters {
+      position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 120px;
-      background: url("checker.png") repeat-x;
-      z-index: 3;
-    }
-
-    .monster {
-      position: absolute;
-      width: 150px;
-      height: 150px;
-      background-size: cover;
-      z-index: 2;
-    }
-    .monster1 { left: 10%; top: 20%; background-image: url("monster1.png"); }
-    .monster2 { left: 50%; top: 40%; background-image: url("monster2.png"); }
-    .monster3 { left: 80%; top: 25%; background-image: url("monster3.png"); }
-
-    /* === Контейнер для падающих берет и билетов === */
-    .fx-container {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
       pointer-events: none;
-      overflow: hidden;
-      z-index: 999; /* поверх всего */
+      padding: 0 5vw;
     }
-
-    .ticket, .beret {
-      position: absolute;
-      display: block;
-      pointer-events: none;
+    .monsters-shadow {
+      opacity: 0.4;
+      filter: grayscale(1) brightness(0.3) blur(2px);
     }
-
-    .ticket img, .beret img {
-      width: 100px;
-      opacity: 0.95;
+    .monsters .monster,
+    .monsters-shadow .shadow {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
     }
-
-    @keyframes fall {
-      from { transform: translateY(-10vh) rotate(0deg); }
-      to   { transform: translateY(110vh) rotate(360deg); }
+    .monsters img,
+    .monsters-shadow img {
+      max-height: 35vh;
+      width: auto;
     }
+    .monsters .center img,
+    .monsters-shadow .center img {
+      max-height: 45vh;
+    }
+    .monsters-shadow .center img { animation: shadowFloat 10s ease-in-out infinite; }
+    @keyframes shadowFloat { 0%, 100% { transform: translateY(5%); } 50% { transform: translateY(-5%); } }
+    .monsters img { transform-origin: bottom center; animation: monsterPeek 5s ease-in-out infinite; }
+    .monsters .center img { animation: monsterPeekCenter 5s ease-in-out infinite; }
+    @keyframes monsterPeek { 0%, 100% { transform: translateY(15%) rotate(0deg); } 50% { transform: translateY(0) rotate(3deg); } }
+    @keyframes monsterPeekCenter { 0%, 100% { transform: translateY(20%) scale(1); } 50% { transform: translateY(0) scale(1.05); } }
   </style>
 </head>
 <body>
-  <!-- === Твоя сцена === -->
-  <div class="monster monster1"></div>
-  <div class="monster monster2"></div>
-  <div class="monster monster3"></div>
-  <div class="checker"></div>
-  <img src="photo9.png" alt="photo9" class="photo9">
+  <!-- ВЕРХНЯЯ КАРТИНКА -->
+  <div class="stack layer-topimg">
+    <div class="top-image">
+      <img src="foto9.png" alt="Foto9" class="foto9">
+    </div>
+  </div>
 
-  <!-- Контейнер для падающих берет и билетов -->
-  <div class="fx-container" id="fx"></div>
+  <!-- ЧЕКЕР -->
+  <div class="stack layer-checker">
+    <div class="checker">
+      <div class="row">
+        <input type="text" id="walletInput" placeholder="Enter wallet address" />
+        <button id="checkBtn" onclick="checkWallet()">
+          <img src="bar_out_18.png" alt="Beret Button" class="beret-btn" />
+        </button>
+      </div>
+      <div id="result"></div>
+    </div>
+  </div>
+
+  <!-- ЭФФЕКТЫ (фон) -->
+  <div class="fx-field layer-fx" aria-hidden="true">
+    <!-- билеты -->
+    <div class="fx-item ticket-item" style="--x:10vw; --delay:0.5s; --dur:7.5s; --size:110px;"><img src="haha_20.png" alt=""></div>
+    <div class="fx-item ticket-item" style="--x:30vw; --delay:2.2s; --dur:6.2s; --size:120px;"><img src="haha_20.png" alt=""></div>
+    <div class="fx-item ticket-item" style="--x:55vw; --delay:1.4s; --dur:8.4s; --size:105px;"><img src="haha_20.png" alt=""></div>
+    <div class="fx-item ticket-item" style="--x:72vw; --delay:3.1s; --dur:7.0s; --size:115px;"><img src="haha_20.png" alt=""></div>
+    <div class="fx-item ticket-item" style="--x:85vw; --delay:4.0s; --dur:6.6s; --size:100px;"><img src="haha_20.png" alt=""></div>
+    <!-- береты -->
+    <div class="fx-item beret-item" style="--x:18vw; --delay:1.0s; --dur:9.2s; --size:95px;"><img src="bar_out_18.png" alt=""></div>
+    <div class="fx-item beret-item" style="--x:42vw; --delay:2.8s; --dur:7.8s; --size:100px;"><img src="bar_out_18.png" alt=""></div>
+    <div class="fx-item beret-item" style="--x:63vw; --delay:0.7s; --dur:9.8s; --size:90px;"><img src="bar_out_18.png" alt=""></div>
+    <div class="fx-item beret-item" style="--x:77vw; --delay:3.6s; --dur:8.6s; --size:92px;"><img src="bar_out_18.png" alt=""></div>
+    <!-- пузыри -->
+    <div class="fx-item bubble-item" style="--x:8vw; --delay:0.4s; --dur:13s; --size:38px;"></div>
+    <div class="fx-item bubble-item" style="--x:25vw; --delay:1.9s; --dur:15s; --size:44px;"></div>
+    <div class="fx-item bubble-item" style="--x:40vw; --delay:3.0s; --dur:12s; --size:36px;"></div>
+    <div class="fx-item bubble-item" style="--x:58vw; --delay:0.8s; --dur:16s; --size:50px;"></div>
+    <div class="fx-item bubble-item" style="--x:73vw; --delay:2.5s; --dur:14s; --size:42px;"></div>
+    <div class="fx-item bubble-item" style="--x:90vw; --delay:4.0s; --dur:18s; --size:46px;"></div>
+  </div>
+
+  <!-- ТЕНИ МОНСТРОВ -->
+  <div class="monsters-shadow layer-monsters-shadow">
+    <div class="shadow left"><img src="game7.png" alt="Shadow Left"></div>
+    <div class="shadow center"><img src="game6.png" alt="Shadow Center"></div>
+    <div class="shadow right"><img src="game8.png" alt="Shadow Right"></div>
+  </div>
+
+  <!-- МОНСТРЫ -->
+  <div class="monsters layer-monsters">
+    <div class="monster left"><img src="game7.png" alt="Monster Left"></div>
+    <div class="monster center"><img src="game6.png" alt="Monster Center"></div>
+    <div class="monster right"><img src="game8.png" alt="Monster Right"></div>
+  </div>
 
   <script>
-    const fx = document.getElementById("fx");
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
+    let whitelist = [];
 
-    function spawnTicket() {
-      const el = document.createElement("div");
-      el.className = "ticket";
-      el.style.left = Math.random() * 100 + "vw";
-      el.style.top = "-15%";
-      const rotate = Math.random() * 360;
-      const duration = 2 + Math.random() * 3;
-      const direction = Math.random() < 0.5 ? 1 : -1;
-      const size = 60 + Math.random() * 80;
-      el.style.transform = `rotate(${rotate}deg)`;
-      el.style.animation = `fall ${duration}s linear forwards`;
-      el.innerHTML = `<img src="haha_20.png" alt="ticket" style="width:${size}px; transform: rotate(${direction * 15}deg);">`;
-      fx.appendChild(el);
-      setTimeout(() => el.remove(), duration * 1000 + 1000);
-    }
+    document.addEventListener("DOMContentLoaded", () => {
+      const checkBtn = document.getElementById("checkBtn");
+      if (checkBtn) checkBtn.disabled = true;
 
-    function spawnBeret() {
-      const el = document.createElement("div");
-      el.className = "beret";
-      el.style.left = Math.random() * 100 + "vw";
-      el.style.top = "-15%";
-      const rotate = Math.random() * 360;
-      const duration = 2 + Math.random() * 3;
-      const direction = Math.random() < 0.5 ? 1 : -1;
-      const size = 60 + Math.random() * 80;
-      el.style.transform = `rotate(${rotate}deg)`;
-      el.style.animation = `fall ${duration}s linear forwards`;
-      el.innerHTML = `<img src="bar_out_18.png" alt="beret" style="width:${size}px; transform: rotate(${direction * 20}deg);">`;
-      fx.appendChild(el);
-      setTimeout(() => el.remove(), duration * 1000 + 1000);
-    }
+      loadWhitelist().then(() => {
+        if (checkBtn) checkBtn.disabled = false;
+      });
 
-    function randomSpawn() {
-      const r = Math.random();
-      if (r < 0.5) {
-        spawnTicket();
-      } else {
-        spawnBeret();
+      document.getElementById("walletInput").addEventListener("keypress", e => {
+        if (e.key === "Enter") checkWallet();
+      });
+    });
+
+    async function loadWhitelist() {
+      try {
+        const bust = "&t=" + Date.now();
+        const url = "https://corsproxy.io/?" + encodeURIComponent(SHEET_URL + bust);
+        const res = await fetch(url, { cache: "no-store" });
+        if (!res.ok) throw new Error("HTTP " + res.status);
+        const csvText = await res.text();
+        whitelist = csvText
+          .split(/\r?\n/)
+          .map(line => line.split(",")[0])
+          .map(addr => (addr || "").trim().replace(/['"]/g, "").toLowerCase())
+          .filter(addr => addr.length > 0);
+        whitelist = Array.from(new Set(whitelist));
+        console.log("Whitelist загружен:", whitelist.length, "адресов");
+      } catch (err) {
+        console.error("Whitelist load error:", err);
+        const resultEl = document.getElementById("result");
+        if (resultEl) {
+          resultEl.innerText = "Whitelist load error 😢";
+          resultEl.style.color = "#ffaaaa";
+        }
       }
-      setTimeout(randomSpawn, 300 + Math.random() * 700);
     }
 
-    randomSpawn();
+    function checkWallet() {
+      const inputEl = document.getElementById("walletInput");
+      const resultEl = document.getElementById("result");
+      if (!inputEl || !resultEl) return;
+
+      const input = inputEl.value.trim().toLowerCase();
+
+      // очищаем поле после проверки
+      inputEl.value = "";
+
+      if (!input) {
+        resultEl.innerText = "Enter wallet address!";
+        resultEl.style.color = "#ffaaaa";
+        if (navigator.vibrate) navigator.vibrate(200);
+        return;
+      }
+
+      if (whitelist.includes(input)) {
+        resultEl.innerText = "✅ Address is in whitelist!";
+        resultEl.style.color = "#00ff88";
+      } else {
+        resultEl.innerText = "❌ Address not found in whitelist.";
+        resultEl.style.color = "#ff6688";
+      }
+    }
   </script>
 </body>
 </html>
-
